(style): epic animations

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
       </section>
 
-      <section id="intro">
+      <!-- <section id="intro">
         <section>
           <p>In de wereld van typografie, vol met harmonie,</p>
           <p>Zien we Delirium, een bier vol magie.</p>
@@ -56,7 +56,11 @@
           <p>De letters dansen, sierlijk en fijn,</p>
           <p>Delirium schittert met krul en lijn.</p>
         </section>
-      </section>
+      </section> -->
+
+      <!-- <section>
+        <p class="word"></p>
+      </section> -->
 
       <div class="cursor-dot-outline"></div>
       <div class="cursor-dot"></div>
