(content): add content

--- a/index.html
+++ b/index.html
@@ -58,6 +58,86 @@
         </section>
       </section> -->
 
+      <section class="history">
+        <h2>Geschiedenis</h2>
+        <p>
+          Het specifieke lettertype dat wordt gebruikt voor "Delirium" bier,
+          bekend als "Huygens" of "Delirium Sans," heeft geen bekende directe
+          voorlopers buiten de context van het biermerk zelf. Het is een
+          aangepast lettertype dat speciaal is ontworpen voor de merkidentiteit
+          van "Delirium."
+        </p>
+
+        <p>
+          Echter, om een bredere context te bieden over de ontwikkeling van
+          sierlijke en versierde lettertypen in de typografische geschiedenis,
+          kunnen we naar de algemene evolutie van lettertypen kijken:
+        </p>
+
+        <ol>
+          <li>
+            <b>Middeleeuwse handschriften:</b> In de middeleeuwen waren de
+            meeste teksten met de hand geschreven, en de gebruikte lettertypen
+            waren vaak sierlijk en versierd. Dit omvatte verluchte initialen en
+            gotische scripttypen.
+
+            <input type="text" class="input-middeleeuwen" />
+          </li>
+          <li>
+            <section>
+              <b>Renaissance en Humanistische lettertypen (15e-16e eeuw):</b>
+              Tijdens de Renaissanceperiode ontwikkelden humanistische geleerden
+              nieuwe lettertypen die waren gebaseerd op klassieke Romeinse
+              inscripties. Deze lettertypen, zoals het lettertype van Nicolas
+              Jenson, kenmerkten zich door hun evenwichtige, sierlijke vormen en
+              vormden een breuk met de meer gotische stijlen van de
+              middeleeuwen.
+            </section>
+
+            <input type="text" class="input-renaissance" />
+          </li>
+          <li>
+            <section>
+              <b>Barok- en Rococo-lettertypen (17e-18e eeuw):</b> Tijdens de
+              Barok- en Rococo-periodes werden lettertypen vaak zeer sierlijk en
+              extravagant. Ze werden gebruikt in kunst, boekdrukken en
+              architectuur en bevatten veel krullen en versieringen.
+            </section>
+
+            <input type="text" class="input-barok" />
+          </li>
+          <li>
+            <section>
+              <b>19e-eeuwse sierlettertypen:</b> De 19e eeuw zag een bloei van
+              sierlijke lettertypen, vooral tijdens de Victoriaanse tijd. Deze
+              lettertypen werden gebruikt in drukwerk, reclame en ornamenten en
+              waren vaak erg decoratief.
+            </section>
+
+            <input type="text" class="input-sier" />
+          </li>
+          <li>
+            <section>
+              <b>Art Nouveau (late 19e-20e eeuw):</b> De Art Nouveau-beweging
+              introduceerde organische, sierlijke vormen in lettertypen en
+              ontwerpen. Dit leidde tot meer vloeiende en krullende lettertypen
+              die werden gebruikt in kunst en design.
+            </section>
+
+            <input type="text" class="input-artnouveau" />
+          </li>
+        </ol>
+        <p>
+          Het lettertype van "Delirium" past in de bredere traditie van
+          sierlijke en decoratieve typografie, maar het is uniek omdat het
+          specifiek is ontworpen voor het merk en niet direct voortkomt uit een
+          van de historische lettertypen of stijlen die hierboven zijn genoemd.
+          Het is gemaakt om de merkidentiteit van "Delirium" te versterken en
+          heeft daarom zijn eigen, herkenbare kenmerken die bijdragen aan de
+          visuele aantrekkingskracht van het biermerk.
+        </p>
+      </section>
+
       <!-- <section>
         <p class="word"></p>
       </section> -->
