--- a/index.html
+++ b/index.html
@@ -41,7 +41,56 @@
         </section>
       </section>
 
-      <!-- <section id="intro">
+      <img class="logo-delirium" src="img/logo-delirum.svg" alt="" />
+
+      <section id="intro">
+        <div class="overflow-hidden">
+          <ul class="beer-row">
+            <li><img src="img/delirium_1.png" alt="" /></li>
+            <li><img src="img/delirium_2.png" alt="" /></li>
+            <li><img src="img/delirium_3.png" alt="" /></li>
+            <li><img src="img/delirium_4.png" alt="" /></li>
+            <li><img src="img/delirium_5.png" alt="" /></li>
+            <li><img src="img/delirium_6.png" alt="" /></li>
+            <li><img src="img/delirium_7.png" alt="" /></li>
+            <li><img src="img/delirium_1.png" alt="" /></li>
+            <li><img src="img/delirium_2.png" alt="" /></li>
+            <li><img src="img/delirium_3.png" alt="" /></li>
+            <li><img src="img/delirium_4.png" alt="" /></li>
+            <li><img src="img/delirium_5.png" alt="" /></li>
+            <li><img src="img/delirium_6.png" alt="" /></li>
+            <li><img src="img/delirium_7.png" alt="" /></li>
+            <li><img src="img/delirium_1.png" alt="" /></li>
+            <li><img src="img/delirium_2.png" alt="" /></li>
+            <li><img src="img/delirium_3.png" alt="" /></li>
+            <li><img src="img/delirium_4.png" alt="" /></li>
+            <li><img src="img/delirium_5.png" alt="" /></li>
+            <li><img src="img/delirium_6.png" alt="" /></li>
+            <li><img src="img/delirium_7.png" alt="" /></li>
+            <li><img src="img/delirium_1.png" alt="" /></li>
+            <li><img src="img/delirium_2.png" alt="" /></li>
+            <li><img src="img/delirium_3.png" alt="" /></li>
+            <li><img src="img/delirium_4.png" alt="" /></li>
+            <li><img src="img/delirium_5.png" alt="" /></li>
+            <li><img src="img/delirium_6.png" alt="" /></li>
+            <li><img src="img/delirium_7.png" alt="" /></li>
+            <li><img src="img/delirium_1.png" alt="" /></li>
+            <li><img src="img/delirium_2.png" alt="" /></li>
+            <li><img src="img/delirium_3.png" alt="" /></li>
+            <li><img src="img/delirium_4.png" alt="" /></li>
+            <li><img src="img/delirium_5.png" alt="" /></li>
+            <li><img src="img/delirium_6.png" alt="" /></li>
+            <li><img src="img/delirium_7.png" alt="" /></li>
+            <li><img src="img/delirium_1.png" alt="" /></li>
+            <li><img src="img/delirium_2.png" alt="" /></li>
+            <li><img src="img/delirium_3.png" alt="" /></li>
+            <li><img src="img/delirium_4.png" alt="" /></li>
+            <li><img src="img/delirium_5.png" alt="" /></li>
+            <li><img src="img/delirium_6.png" alt="" /></li>
+            <li><img src="img/delirium_7.png" alt="" /></li>
+          </ul>
+        </div>
+
         <section>
           <p>In de wereld van typografie, vol met harmonie,</p>
           <p>Zien we Delirium, een bier vol magie.</p>
@@ -56,11 +105,11 @@
           <p>De letters dansen, sierlijk en fijn,</p>
           <p>Delirium schittert met krul en lijn.</p>
         </section>
-      </section> -->
+      </section>
 
       <section class="history">
         <h2>Geschiedenis</h2>
-        <p>
+        <p class="normal-font">
           Het specifieke lettertype dat wordt gebruikt voor "Delirium" bier,
           bekend als "Huygens" of "Delirium Sans," heeft geen bekende directe
           voorlopers buiten de context van het biermerk zelf. Het is een
@@ -68,7 +117,7 @@
           van "Delirium."
         </p>
 
-        <p>
+        <p class="normal-font">
           Echter, om een bredere context te bieden over de ontwikkeling van
           sierlijke en versierde lettertypen in de typografische geschiedenis,
           kunnen we naar de algemene evolutie van lettertypen kijken:
@@ -76,58 +125,70 @@
 
         <ol>
           <li>
-            <b>Middeleeuwse handschriften:</b> In de middeleeuwen waren de
-            meeste teksten met de hand geschreven, en de gebruikte lettertypen
-            waren vaak sierlijk en versierd. Dit omvatte verluchte initialen en
-            gotische scripttypen.
+            <h3>Middeleeuwse handschriften:</h3>
+            <p class="normal-font">
+              In de middeleeuwen waren de meeste teksten met de hand geschreven,
+              en de gebruikte lettertypen waren vaak sierlijk en versierd. Dit
+              omvatte verluchte initialen en gotische scripttypen.
+            </p>
 
             <input type="text" class="input-middeleeuwen" />
           </li>
           <li>
             <section>
-              <b>Renaissance en Humanistische lettertypen (15e-16e eeuw):</b>
-              Tijdens de Renaissanceperiode ontwikkelden humanistische geleerden
-              nieuwe lettertypen die waren gebaseerd op klassieke Romeinse
-              inscripties. Deze lettertypen, zoals het lettertype van Nicolas
-              Jenson, kenmerkten zich door hun evenwichtige, sierlijke vormen en
-              vormden een breuk met de meer gotische stijlen van de
-              middeleeuwen.
+              <h3>Renaissance en Humanistische lettertypen (15e-16e eeuw):</h3>
+              <p class="normal-font">
+                Tijdens de Renaissanceperiode ontwikkelden humanistische
+                geleerden nieuwe lettertypen die waren gebaseerd op klassieke
+                Romeinse inscripties. Deze lettertypen, zoals het lettertype van
+                Nicolas Jenson, kenmerkten zich door hun evenwichtige, sierlijke
+                vormen en vormden een breuk met de meer gotische stijlen van de
+                middeleeuwen.
+              </p>
             </section>
 
             <input type="text" class="input-renaissance" />
           </li>
           <li>
             <section>
-              <b>Barok- en Rococo-lettertypen (17e-18e eeuw):</b> Tijdens de
-              Barok- en Rococo-periodes werden lettertypen vaak zeer sierlijk en
-              extravagant. Ze werden gebruikt in kunst, boekdrukken en
-              architectuur en bevatten veel krullen en versieringen.
+              <h3>Barok- en Rococo-lettertypen (17e-18e eeuw):</h3>
+              <p class="normal-font">
+                Tijdens de Barok- en Rococo-periodes werden lettertypen vaak
+                zeer sierlijk en extravagant. Ze werden gebruikt in kunst,
+                boekdrukken en architectuur en bevatten veel krullen en
+                versieringen.
+              </p>
             </section>
 
             <input type="text" class="input-barok" />
           </li>
           <li>
             <section>
-              <b>19e-eeuwse sierlettertypen:</b> De 19e eeuw zag een bloei van
-              sierlijke lettertypen, vooral tijdens de Victoriaanse tijd. Deze
-              lettertypen werden gebruikt in drukwerk, reclame en ornamenten en
-              waren vaak erg decoratief.
+              <h3>19e-eeuwse sierlettertypen:</h3>
+              <p class="normal-font">
+                De 19e eeuw zag een bloei van sierlijke lettertypen, vooral
+                tijdens de Victoriaanse tijd. Deze lettertypen werden gebruikt
+                in drukwerk, reclame en ornamenten en waren vaak erg decoratief.
+              </p>
             </section>
 
             <input type="text" class="input-sier" />
           </li>
           <li>
             <section>
-              <b>Art Nouveau (late 19e-20e eeuw):</b> De Art Nouveau-beweging
-              introduceerde organische, sierlijke vormen in lettertypen en
-              ontwerpen. Dit leidde tot meer vloeiende en krullende lettertypen
-              die werden gebruikt in kunst en design.
+              <h3>Art Nouveau (late 19e-20e eeuw):</h3>
+              <p class="normal-font">
+                De Art Nouveau-beweging introduceerde organische, sierlijke
+                vormen in lettertypen en ontwerpen. Dit leidde tot meer
+                vloeiende en krullende lettertypen die werden gebruikt in kunst
+                en design.
+              </p>
             </section>
 
             <input type="text" class="input-artnouveau" />
           </li>
         </ol>
-        <p>
+        <p class="normal-font">
           Het lettertype van "Delirium" past in de bredere traditie van
           sierlijke en decoratieve typografie, maar het is uniek omdat het
           specifiek is ontworpen voor het merk en niet direct voortkomt uit een
