(style): word styling)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DELIRIUM</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
   </head>
   <body>
     <header>
@@ -41,9 +42,11 @@
         </section>
       </section>
 
-      <img class="logo-delirium" src="img/logo-delirum.svg" alt="" />
-
       <section id="intro">
+        <section>
+          <p class="word"></p>
+        </section>
+
         <div class="overflow-hidden">
           <ul class="beer-row">
             <li><img src="img/delirium_1.png" alt="" /></li>
@@ -198,10 +201,6 @@
           visuele aantrekkingskracht van het biermerk.
         </p>
       </section>
-
-      <!-- <section>
-        <p class="word"></p>
-      </section> -->
 
       <div class="cursor-dot-outline"></div>
       <div class="cursor-dot"></div>
