--- a/index.html
+++ b/index.html
@@ -106,30 +106,6 @@
           <p>De letters dansen, sierlijk en fijn,</p>
           <p>Delirium schittert met krul en lijn.</p>
         </section>
-
-        <section>
-          <svg id="rotatingText" viewBox="0 0 200 200" width="200" height="200">
-            <defs>
-              <path
-                id="circle"
-                d="M 100, 100
-                      m -75, 0
-                      a 75, 75 0 1, 0 150, 0
-                      a 75, 75 0 1, 0 -150, 0
-                      "
-              ></path>
-            </defs>
-            <text width="400">
-              <textPath
-                alignment-baseline="top"
-                xlink:href="#circle"
-                class="text"
-              >
-                DELIRIUM TREMENS - DELIRIUM TREMENS -
-              </textPath>
-            </text>
-          </svg>
-        </section>
       </section>
 
       <section class="history observe">
@@ -247,7 +223,65 @@
         </p>
       </section>
 
+      <div class="spacing-1"></div>
+
+      <section class="links">
+        <svg id="rotatingText" viewBox="0 0 200 200" width="200" height="200">
+          <defs>
+            <path
+              id="circle"
+              d="M 100, 100
+                    m -75, 0
+                    a 75, 75 0 1, 0 150, 0
+                    a 75, 75 0 1, 0 -150, 0
+                    "
+            ></path>
+          </defs>
+          <text width="400">
+            <textPath
+              alignment-baseline="top"
+              xlink:href="#circle"
+              class="text"
+            >
+              DELIRIUM TREMENS - DELIRIUM TREMENS -
+            </textPath>
+          </text>
+        </svg>
+      </section>
+
+      <section class="rechts">
+        <svg id="rotatingText" viewBox="0 0 200 200" width="200" height="200">
+          <defs>
+            <path
+              id="circle"
+              d="M 100, 100
+                    m -75, 0
+                    a 75, 75 0 1, 0 150, 0
+                    a 75, 75 0 1, 0 -150, 0
+                    "
+            ></path>
+          </defs>
+          <text width="400">
+            <textPath
+              alignment-baseline="top"
+              xlink:href="#circle"
+              class="text"
+            >
+              DELIRIUM TREMENS - DELIRIUM TREMENS -
+            </textPath>
+          </text>
+        </svg>
+      </section>
+
+      <div class="spacing-2"></div>
+
       <section id="kenmerken">
+        <p>AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz</p>
+        <p>0 1 2 3 4 5 6 7 8 9</p>
+        <p>! @ # $ % ^ & * ( ) _ + - = [ ] { } | ; : ' " , . < > / ? \ ` ~</p>
+        <p>Ä Ö Ü Ë Ï Ẅ Ÿ Ṟ Ņ Ő Ć Ś Ź Č Đ Š Ž</p>
+        <p>ä ö ü ë ï ẅ ÿ ṟ ņ ő ć ś ź č đ š ž</p>
+
         <h2>Kenmerken</h2>
         <p class="normal-font">
           Het Delirium-font is een modern, decoratief lettertype dat zich
@@ -311,96 +345,58 @@
       </section>
 
       <section id="voorbeelden">
-        <h2>Vergelijkbare lettertypen</h2>
+        <h2>Verwante lettertypen</h2>
         <ul>
           <li>
             <img src="img/similar_1.png" alt="" />
             <section>
-              <h3>font naam</h3>
-              <p>
-                waarom het similar is Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Eligendi distinctio fugiat dignissimos sed
-                quos nisi dolor molestiae eos obcaecati maiores!
-              </p>
-              <p>bronvermelding</p>
-            </section>
-          </li>
-
-          <li>
-            <img src="img/similar_2.png" alt="" />
-            <section>
-              <h3>font naam</h3>
-              <p>
-                waarom het similar is Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Eligendi distinctio fugiat dignissimos sed
-                quos nisi dolor molestiae eos obcaecati maiores!
-              </p>
-              <p>bronvermelding</p>
-            </section>
-          </li>
-
-          <li>
-            <img src="img/similar_3.png" alt="" />
-            <section>
-              <h3>font naam</h3>
-              <p>
-                waarom het similar is Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Eligendi distinctio fugiat dignissimos sed
-                quos nisi dolor molestiae eos obcaecati maiores!
-              </p>
-              <p>bronvermelding</p>
+              <h3>untitled</h3>
+              <p>1969</p>
+              <a
+                href="https://creativemarket.com/blog/all-you-ever-wanted-to-know-about-psychedelic-fonts-in-design"
+                >bron</a
+              >
             </section>
           </li>
 
           <li>
             <img src="img/similar_4.png" alt="" />
             <section>
-              <h3>font naam</h3>
-              <p>
-                waarom het similar is Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Eligendi distinctio fugiat dignissimos sed
-                quos nisi dolor molestiae eos obcaecati maiores!
-              </p>
-              <p>bronvermelding</p>
+              <h3>Monopol</h3>
+              <p>1993</p>
+              <a href="https://fontsinuse.com/typefaces/219918/monopol-williams"
+                >bron</a
+              >
             </section>
           </li>
 
           <li>
             <img src="img/similar_5.jpeg" alt="" />
             <section>
-              <h3>font naam</h3>
-              <p>
-                waarom het similar is Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Eligendi distinctio fugiat dignissimos sed
-                quos nisi dolor molestiae eos obcaecati maiores!
-              </p>
-              <p>bronvermelding</p>
+              <h3>Ringlet</h3>
+              <p>1882</p>
+              <a href="https://fontsinuse.com/typefaces/7581/ringlet">bron</a>
             </section>
           </li>
 
           <li>
             <img src="img/similar_6.jpeg" alt="" />
             <section>
-              <h3>font naam</h3>
-              <p>
-                waarom het similar is Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Eligendi distinctio fugiat dignissimos sed
-                quos nisi dolor molestiae eos obcaecati maiores!
-              </p>
-              <p>bronvermelding</p>
+              <h3>DAVIDA</h3>
+              <p>1965</p>
+              <a href="https://fontsinuse.com/typefaces/6793/davida">bron</a>
             </section>
           </li>
 
           <li>
             <img src="img/similar_7.jpeg" alt="" />
             <section>
-              <h3>font naam</h3>
-              <p>
-                waarom het similar is Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Eligendi distinctio fugiat dignissimos sed
-                quos nisi dolor molestiae eos obcaecati maiores!
-              </p>
-              <p>bronvermelding</p>
+              <h3>Casserole</h3>
+              <p>2023</p>
+              <a
+                href="https://fontsinuse.com/typefaces/217684/casserole-classic"
+                >bron</a
+              >
             </section>
           </li>
         </ul>
