(style): add bg animation

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <main>
       <h1 class="sr-only">Delirium typografie publicatie</h1>
+      <button class="trip-button"></button>
 
       <section id="intro">
         <section>
@@ -276,11 +277,15 @@
       <div class="spacing-2"></div>
 
       <section id="kenmerken">
-        <p>AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz</p>
-        <p>0 1 2 3 4 5 6 7 8 9</p>
-        <p>! @ # $ % ^ & * ( ) _ + - = [ ] { } | ; : ' " , . < > / ? \ ` ~</p>
-        <p>Ä Ö Ü Ë Ï Ẅ Ÿ Ṟ Ņ Ő Ć Ś Ź Č Đ Š Ž</p>
-        <p>ä ö ü ë ï ẅ ÿ ṟ ņ ő ć ś ź č đ š ž</p>
+        <section class="letters">
+          <p>
+            Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww
+            Xx Yy Zz
+          </p>
+          <p>0 1 2 3 4 5 6 7 8 9</p>
+          <p>! @ # $ % ^ & * ( ) _ + - = [ ] { } | ; : ' " , . < > / ? \ ` ~</p>
+          <p>Ää Öö Üü Ëë Ïï Ẅẅ Ÿÿ</p>
+        </section>
 
         <h2>Kenmerken</h2>
         <p class="normal-font">
@@ -404,6 +409,21 @@
 
       <div class="cursor-dot-outline"></div>
       <div class="cursor-dot"></div>
+
+      <div class="background-container">
+        <div class="background-animation">
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+        </div>
+      </div>
     </main>
 
     <footer></footer>
